# react-native-nitro-totp

./: .gitignore  .release-it.json  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.MD  LICENSE  NitroTotp.podspec  README.md  SECURITY.md  bun.lockb  eslint.config.mjs  nitro.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
.husky/: pre-commit
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/totp/: NitroTotpPackage.java  NitroTotpPackage.kt
cpp/: Base32.hpp  BaseOptions.cpp  BaseOptions.hpp  Hmac.cpp  Hmac.hpp  HybridNitroHotp.cpp  HybridNitroHotp.hpp  HybridNitroSecret.hpp  HybridNitroTotp.cpp  HybridNitroTotp.hpp  Utils.cpp  Utils.hpp
cpp/core/: Base32.cpp  Hmac.cpp  Secret.cpp  Secret.hpp
cpp/hybrid/: HybridNitroHotp.cpp  HybridNitroHotp.hpp  HybridNitroSecret.cpp  HybridNitroSecret.hpp  HybridNitroTotp.cpp  HybridNitroTotp.hpp
cpp/utils/: BaseOptions.cpp  BaseOptions.hpp  Utils.cpp  Utils.hpp
example/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/nitrototpexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  AppDelegate.swift  Podfile
example/ios/NitroTotpExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/NitroTotpExample.xcodeproj/: project.pbxproj
example/ios/NitroTotpExample.xcodeproj/xcshareddata/xcschemes/: NitroTotpExample.xcscheme
example/ios/NitroTotpExample.xcworkspace/: contents.xcworkspacedata
example/ios/NitroTotpExampleTests/: NitroTotpExampleTests.m
example/src/: App.tsx
example/src/components/: Button.tsx  Input.tsx  ProgressBar.tsx  QRCode.tsx  index.ts
example/src/configs/: totp.ts
example/src/constants/: totp.ts
example/src/hooks/: useTimer.ts
example/src/screens/: HOTPScreen.tsx  HomeScreen.tsx  TOTPScreen.tsx  TimeZonesScreen.tsx
example/src/theme/: colors.ts
example/src/utils/: totpHelpers.ts
ios/: NitroTotpOnLoad.mm
scripts/: build-openssl.sh
src/: NitroHotp.ts  NitroSecret.ts  NitroTotp.ts  constants.ts  index.ts  types.ts  utils.ts
src/specs/: NitroHotp.nitro.ts  NitroSecret.nitro.ts  NitroTotp.nitro.ts
